# Bits-and-bobs

./: CHANGELOG.rst  README.md
Old-Vision-code/: CameraTest.py  FaceRecognitionTraining.py
Vision/: FaceRecognition.py  FaceRecognitionTraining.py  VideoTest.py
arduinoNodes/: README.md
arduinoNodes/ServoControl4Channel/: ServoControl4Channel.ino
mapping_launch/: CHANGELOG.rst  CMakeLists.txt  package.xml
mapping_launch/launch/: mapping.launch
odom_test/: CHANGELOG.rst  CMakeLists.txt  package.xml
odom_test/src/: odom_test1_node.py  odom_test2_node.py
pid_test/: CHANGELOG.rst  CMakeLists.txt  package.xml
pid_test/src/: pid_test_node.cpp
pid_test/srv/: SetSpeedTime.srv
rodney_head_test/: CHANGELOG.rst  CMakeLists.txt  package.xml
rodney_head_test/include/rodney_head_test/: rodney_head_test_node.h
rodney_head_test/src/: rodney_head_test_node.cpp
rodney_object_test/: CHANGELOG.rst  CMakeLists.txt  package.xml
rodney_object_test/src/: rodney_object_test_node.py
rodney_recognition_test/: CHANGELOG.rst  CMakeLists.txt  package.xml
rodney_recognition_test/include/rodney_recognition_test/: rodney_recognition_test_node.h
rodney_recognition_test/src/: rodney_recognition_test_node.cpp  rodney_recognition_test_node.py
rodney_sim_control/: CHANGELOG.rst  package.xml
rodney_sim_control/config/: rondey_sim_control.yaml
rodney_sim_control/launch/: nav.launch  rodney_sim_control.launch
rodney_sim_control/maps/: willowgarage_world.yaml
rodney_sim_control/rviz/: urdf.rviz
rodney_sim_control/worlds/: rodney.world
rodney_voice_test/: CHANGELOG.rst  CMakeLists.txt  package.xml
rodney_voice_test/include/rodney_voice_test/: rodney_voice_test_node.h
rodney_voice_test/launch/: test.launch
rodney_voice_test/src/: rodney_voice_test_node.cpp
src/rodney_msgs/: CMakeLists.txt
src/rodney_msgs/msg/: servo_array.msg
