<?xml version="1.0"?>
<package format="2">
  <name>mapping_launch</name>
  <version>1.0.0</version>
  <description>The mapping_launch package</description>

  <maintainer email="sleepyserver6@gmail.com">Philip Hopley</maintainer>

  <license>BSD</license>

  <author email="sleepyserver6@gmail.com">Philip Hopley</author>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
