<?xml version="1.0"?>
<package format="2">
  <name>pid_test</name>
  <version>0.1.0</version>
  <description>The pid_test package</description>

  <maintainer email="phil@todo.todo">phil</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
