<?xml version="1.0"?>
<package format="2">
  <name>rodney_recognition_test</name>
  <version>0.1.0</version>
  <description>The rodney_recognition_test package</description>

  <maintainer email="sleepyserver6@gmail.com">Philip Hopley</maintainer>

  <license>BSD</license>

  <author email="sleepyserver6@gmail.com">Philip Hopley</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>face_recognition_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>face_recognition_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>face_recognition_msgs</exec_depend>

</package>
