<?xml version="1.0"?>
<package format="2">
  <name>rodney_voice_test</name>
  <version>0.1.0</version>
  <description>The rodney_voice_test package is an integration test for voice and robot face</description>

  <maintainer email="sleepyserver6@gmail.com">Philip Hopley</maintainer>

  <license>BSD</license>

  <author email="sleepyserver6@gmail.com">Philip Hopley</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>keyboard</build_depend>
  <build_depend>speech</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>keyboard</build_export_depend>
  <build_export_depend>speech</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>keyboard</exec_depend>
  <exec_depend>speech</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>

</package>
